@@ -56,17 +56,17 @@ public abstract class AbstractUrlProcessor {
 	 * 
 	 * @param url
 	 *            original url
-	 * @param isFormUrl
-	 *            is form or link url?
+	 * @param method
+	 *            Http method
 	 * @param request
 	 *            {@link HttpServletRequest} object
 	 * @return new instance of {@link UrlData}
 	 */
-	public UrlData createUrlData(String url, boolean isFormUrl, HttpServletRequest request) {
+	public UrlData createUrlData(String url, String method, HttpServletRequest request) {
 
 		Assert.notNull(this.config);
 
-		UrlData urlData = new UrlData(url, isFormUrl);
+		UrlData urlData = new UrlData(url, method);
 
 		// Extract the anchor
 		if (url.indexOf('#') >= 0) {
@@ -178,13 +178,13 @@ public abstract class AbstractUrlProcessor {
 	protected boolean isStartPage(UrlData urlData) {
 
 		// If this is a start page, don't compose
-		if (this.config.isStartPage(urlData.getContextPathRelativeUrl(), urlData.isFormUrl())) {
+		if (this.config.isStartPage(urlData.getContextPathRelativeUrl(), urlData.getMethod())) {
 			return true;
 		}
 
 		// If the url contains the context path and is a start page, don't
 		// compose
-		if (this.config.isStartPage(urlData.getUrlWithoutContextPath(), urlData.isFormUrl())) {
+		if (this.config.isStartPage(urlData.getUrlWithoutContextPath(), urlData.getMethod())) {
 			return true;
 		}
 
@@ -333,8 +333,8 @@ public abstract class AbstractUrlProcessor {
 		}
 
 		boolean validateParamLessUrls = this.config.isValidationInUrlsWithoutParamsActivated();
-		// if url is a link (not a form action) and has not got parameters, we do not have to include HDIV's state
-		if (!urlData.isFormUrl() && !validateParamLessUrls && !urlData.containsParams()) {
+		// if url is a link (or a GET method form) and has not got parameters, we do not have to include HDIV's state
+		if (urlData.isGetMethod() && !validateParamLessUrls && !urlData.containsParams()) {
 			return false;
 		}
 
